samples/_failures_safe/1761427757_125987_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa974cb1.c: In function ‘main’:
./samples/SAFE/__tmp_fa974cb1.c:168:25: error: missing terminating " character
  168 |         fprintf(stderr, "Empty input
      |                         ^~~~~~~~~~~~
./samples/SAFE/__tmp_fa974cb1.c:168:9: error: expected expression at end of input
  168 |         fprintf(stderr, "Empty input
      |         ^~~~~~~
./samples/SAFE/__tmp_fa974cb1.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa974cb1.c:168:9: error: expected declaration or statement at end of input
